Changed bg color

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Color Test</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-green-400">
+<body class="bg-red-400">
     <h1 class="text-center text-7xl">Color Test</h1>
 </body>
 </html>
